--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -55,8 +55,8 @@
 						whilst numbers are enough to ensure healthy social interactions, we design meaningful game-based exercises,
 						and most importantly exciting 1 on 1 duels!</p>
 					<p class="lead">
-						At this early stage of our business lifecycle, we offer the school-term programs to players aged between 5
-						and 12 years old. The sessions are a general mix of skill level, until we achieve the necessary
+						At this early stage of our business lifecycle, we offer the school-term programs <b>to players aged between 5
+						and 12 years old.</b> The sessions are a general mix of skill level, until we achieve the necessary
 						numbers to begin offering different skill level sessions.</p>
 					<p class="lead">
 						There is a small choice in sessions, running across two nights per week for Term 2 of 2023 (24th April –
@@ -85,26 +85,25 @@
 						If a player wants to join after the term has started, no worries! It is still a minimum commitment
 						of 1 session per week for the remainder of weeks in that school term.</p>
 					<p class="lead">
-						Payments are upfront at the beginning of term priced at: $25 per player per session or $250 upfront for the
-						term. Or the remainder
-						of the weeks as calculated from the players arrival during the term.</p>
+						<b>Payments are upfront at the beginning of term priced at: $25 per player per session or $250 upfront for the
+							term. </b> Or the remainder of the weeks as calculated from the players arrival during the term.</p>
 					<p class="lead">
 						Players are to select a minimum of one time slot per week (from the available times listed above) according
 						to their age group.
 						Ages are determined based on the players age as of December 2023.</p>
 					<p class="lead">
-						If a player wishes to do 2 sessions per week there is a $5 discount for the second session. Pricing then
+						<b>If a player wishes to do 2 sessions per week there is a $5 discount for the second session.</b> Pricing then
 						becomes:
 						$25 for the first session and $20 for the second through the 10-week program. That equals an upfront payment
 						of $450.
 						Similar calculations as above if the player arrives during the term.</p>
 					<h3>Siblings</h3>
 					<p class="lead">
-						Siblings also receive a $5 discount. That is, the first sibling is $25 per session for the term, and all
+						<b>Siblings also receive a $5 discount.</b> That is, the first sibling is $25 per session for the term, and all
 						subsequent siblings are $20 per term program.</p>
 					<h3>Joining Fees and Uniform Fees</h3>
 					<p class="lead">
-						None! At Foot and Ball Academy we believe our no joining fee and no uniform fee is a financial advantage in
+						<b>None!</b> At Foot and Ball Academy we believe our <b>no joining fee and no uniform fee</b> is a financial advantage in
 						this market space. We pride ourselves on having no additional fees beyond payment of the players direct
 						footballing education.
 						We strive to provide affordable access to our services as reasonably possible. Player improvement is truly
