--- a/register.html
+++ b/register.html
@@ -44,15 +44,15 @@
 				<div class="row">
 					<div class="col-md-6 mb-3">
 
-						Register for our Easter casual sessions. <br>Get some Holiday action now!
+						Easter Holiday Action!
 
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>Click Here for <br> Easter Holiday Registration</b></a>
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b> April Easter Holiday 2023 Registration<br> Click here </b></a>
 
 		</div>
 		<div class="col-md-6 mb-3">
 
-			Our next School Term program runs from April-July 2023. <br>Register for the 10 week program.
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"><b>Click Here for <br> TERM 2 2023 Registration </b></a>
+			<b>2023 School Term 2 is fast approaching. <br>Enrol for our 10 week program.</b> 
+			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"><b>TERM 2 2023 Registration<br> Click here </b></a>
 
 		</div>
 		<div class="col-md-6 mb-3">
