--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
 		</div>
 		<div class="col-md-6 mb-3">
 
-			<b>2023 School Term 2 is fast approaching. <br>Enrol for our 10 week program.</b> 
+			2023 School Term 2 is fast approaching! Enrol for our 10 week program. 
 			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"><b>TERM 2 2023 Registration<br> Click here </b></a>
 
 		</div>
