changed title page and rego links

--- a/footer.html
+++ b/footer.html
@@ -11,13 +11,13 @@
         <i class="fa fa-phone" style="width:30px"></i> +61 452 583 279<br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <i class="fa fa-envelope" style="width:30px"> </i> mail@footandball.com.au<br>
+        <i class="fa fa-envelope" style="width:30px"> </i> footandballacademy@outlook.com<br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <a href="https://www.instagram.com/footandballacademy/" class="link-secondary"><i class="fab fa-instagram" style="width:30px"> </i> @footandballacademy </a><br>
+        <a href="https://www.instagram.com/footandballacademy/" ><i class="fab fa-instagram" style="width:30px"> </i> @footandballacademy </a><br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <a href="https://www.facebook.com/100090119914421" class="link-secondary"><i class="fab fa-facebook-f" style="width:30px"> </i> facebook.com/footandballacademy </a><br>
+        <a href="https://www.facebook.com/100090119914421" ><i class="fab fa-facebook-f" style="width:30px"> </i> facebook.com/footandballacademy </a><br>
       </div>
 
     </div>
