--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<span class="emboss">Enrolling for a school term? A one-off group session? Or a 1 on 1? Find out more.
 								</span>
 							</p>
-							<a href="Programs.html" class="btn btn-info">Register for a Program</a>
+							<a href="register.html" class="btn btn-info">Register for a Program</a>
 						</div>
 					</div>
 				</div>
