--- a/register.html
+++ b/register.html
@@ -19,60 +19,70 @@
 	<div id="nav-placeholder"></div>
 	<!-- Nav Section End -->
 
-		<!-- About Section Start -->
-		<section id="about" class="text-center py-5 text-light">
-			<div class="inner-overlay">
-				<div class="container">
-					<div class="row">
-						<div class="col mt-5 pt-4">
-							<h1 class="text-light">Register</h1>
-							<p class="lead">
-								Register for one of our programs below. 
-							</p>
-						</div>
+	<!-- About Section Start -->
+	<section id="about" class="text-center py-5 text-light">
+		<div class="inner-overlay">
+			<div class="container">
+				<div class="row">
+					<div class="col mt-5 pt-4">
+						<h1 class="text-light">Register</h1>
+						<p class="lead">
+							Register for one of our programs below.
+						</p>
 					</div>
 				</div>
 			</div>
-		</section>
-		<!-- About Section End -->
+		</div>
+	</section>
+	<!-- About Section End -->
 
 	<!-- Info Section Start -->
 	<section id="about-info">
 		<!-- <div class="iframe-container"> -->
 
-			<div class="container p-5">
-				<div class="row">
-					<div class="col-md-6 mb-3">
+		<div class="container p-5">
+			<div class="row">
+				<div class="col-md-6 mb-3">
+					<div style="height:50px; display: grid;align-content: end;">
+						April Easter Holiday 2023 Action!
+					</div>
+					<a class="btn btn-info btn-block" target="_blank"
+						href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>
+							April Easter Holiday Registration<br> Click here </b></a>
+					<div style="height:50px"></div>
+				</div>
+				<div class="col-md-6 mb-3">
+					<div style="height:50px; display: grid;align-content: end;">
+						2023 School Term 2 is fast approaching! Enrol for our 10 week program.
+					</div>
+					<a class="btn btn-info btn-block" target="_blank"
+						href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"><b>TERM
+							2 2023 Registration<br> Click here </b></a>
+					<div style="height:50px"></div>
+				</div>
+				<div class="col-md-6 mb-3">
+					<div style="height:50px; display: grid;align-content: end;">
+						Mix up your team's training goals with special group sessions.
+					</div>
+					<a class="btn btn-info btn-block disabled" role="button" aria-disabled="true" target="_blank"
+						href="https://..."><b>Call us <br>0452 583 279</b></a>
+					<div style="height:50px"></div>
+				</div>
+				<div class="col-md-6 mb-3">
+					<div style="height:50px; display: grid;align-content: end;">
+						Looking for 1-on-1 private development? Book one or more sessions!
+					</div>
+					<a class="btn btn-info btn-block disabled" role="button" aria-disabled="true" target="_blank"
+						href="https://..."><b>Call us <br>0452 583 279</b></a>
+					<div style="height:50px"></div>
 
-						Easter Holiday Action!
-
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b> April Easter Holiday 2023 Registration<br> Click here </b></a>
-
+				</div>
+			</div>
 		</div>
-		<div class="col-md-6 mb-3">
 
-			2023 School Term 2 is fast approaching! Enrol for our 10 week program. 
-			<a class="btn btn-info btn-block" target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"><b>TERM 2 2023 Registration<br> Click here </b></a>
-
-		</div>
-		<div class="col-md-6 mb-3">
-
-			Mix up your team's training goals with special group sessions.
-			<a class="btn btn-info btn-block disabled" role="button" aria-disabled="true" target="_blank" href="https://..."><b>Coming <br>Soon</b></a>
-
-		</div>
-		<div class="col-md-6 mb-3">
-
-			Looking for 1-on-1 private development? Book one or more sessions!
-			<a class="btn btn-info btn-block disabled"  role="button" aria-disabled="true" target="_blank" href="https://..."><b>Coming <br>Soon</b></a>
-
-		</div>
-	</div>
-</div>
-			
 
 		<!-- </div> -->
-		</section>
+	</section>
 	<!-- About Info Section End -->
 
 
