--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -27,9 +27,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">Private Session</h1>
+						<h1 class="text-light">Private Sessions</h1>
 						<p class="lead">
-							Find out about our Private Sessions below.
+							Tailored sessions for you and your team.
 						</p>
 					</div>
 				</div>
@@ -44,7 +44,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						We offer a variety of accessible training sessions outside of our CORE school term programs.</p>
+						We offer a variety of accessible training sessions outside of our core school term programs.</p>
 					<p class="lead">
 						These sessions are customised to suit the requirements of the client and their specific training needs.</p>
 					<p class="lead">
@@ -67,9 +67,9 @@
 						<li>Price: $100 per hour.</li>
 					</ul>
 
-					<h3>1 on 1 or 1 on 2 focus session</h3>
+					<h3>1-on-1 or 1-on-2 focus session</h3>
 					<p class="lead">
-						The traditional 1 on 1 or 1 on 2 sessions, focusing on a high-intensity footballing workout. Customised to the client’s needs, the session 
+						The traditional 1-on-1 or 1-on-2 sessions, focusing on a high-intensity footballing workout. Customised to the client’s needs, the session 
 						focuses on a balance between technical improvement as well as increases in fitness and concentration through high-intensity ball-related exercises.</p>
 					<p></p>
 					<ul>
@@ -109,7 +109,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<a href="register.html" class="btn btn-warning" role="button">Click Here to Register</a>
+					<a href="register.html" class="btn btn-warning disabled" role="button">Call to Register: 0452 583 279</a>
 				</div>
 			</div>
 
