--- a/register.html
+++ b/register.html
@@ -42,41 +42,59 @@
 
 		<div class="container p-5">
 			<div class="row">
-				<div class="col-md-6 mb-3">
-					<div style="height:50px; display: grid;align-content: end;">
-						April Easter Holiday 2023 Action!
-					</div>
-					<a class="btn btn-info btn-block" target="_blank"
-						href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"><b>
-							April Easter Holiday Registration<br> Click here </b></a>
-					<div style="height:50px"></div>
-				</div>
-				<div class="col-md-6 mb-3">
-					<div style="height:50px; display: grid;align-content: end;">
-						2023 School Term 2 is fast approaching! Enrol for our 10 week program.
-					</div>
-					<a class="btn btn-info btn-block" target="_blank"
-						href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"><b>TERM
-							2 2023 Registration<br> Click here </b></a>
-					<div style="height:50px"></div>
-				</div>
-				<div class="col-md-6 mb-3">
-					<div style="height:50px; display: grid;align-content: end;">
-						Mix up your team's training goals with special group sessions.
-					</div>
-					<a class="btn btn-info btn-block disabled" role="button" aria-disabled="true" target="_blank"
-						href="https://..."><b>Call us <br>0452 583 279</b></a>
-					<div style="height:50px"></div>
-				</div>
-				<div class="col-md-6 mb-3">
-					<div style="height:50px; display: grid;align-content: end;">
-						Looking for 1-on-1 private development? Book one or more sessions!
-					</div>
-					<a class="btn btn-info btn-block disabled" role="button" aria-disabled="true" target="_blank"
-						href="https://..."><b>Call us <br>0452 583 279</b></a>
-					<div style="height:50px"></div>
 
+				<div class="col-md-6 mb-3">
+					<div class="card" style="width: 90%;">
+						<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u">
+						<img src="img/EARLY_Easter_Holiday_Session_2023_cropped.png" style="height: 300px; background-size: cover;" class="card-img-top"
+							alt="Bootcamp Holiday Sessions"></a>
+						<div class="card-body">
+							<h2 class="card-title">April Easter Holiday 2023</h2>
+							<p class="card-text">Drop in coaching sessions, small sides, all welcome.</p>
+							<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"
+								class="btn btn-info">Register Now</a>
+						</div>
+					</div>
 				</div>
+
+				<div class="col-md-6 mb-3">
+					<div class="card" style="width: 90%">
+						<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u">
+						<img src="img/stock11.jpg" style="height: 300px" class="card-img-top" alt="Progressive Training Programs"></a>
+						<div class="card-body">
+							<h2 class="card-title">2023 School Term 2</h2>
+							<p class="card-text">10 Week Progressive Training Program. <a href="SchoolTerms.html"
+									class="link-secondary">Read more...</a></p>
+							<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"
+								class="btn btn-info">Register Now</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6 mb-3">
+					<div class="card" style="width: 90%;">
+						<img src="img/stock10.jpg" style="height: 300px" class="card-img-top" alt="Bespoke Team Training">
+						<div class="card-body">
+							<h2 class="card-title">Team Sessions</h2>
+							<p class="card-text">Mix up your team's training program with a specialised group session. <a
+									href="PrivateSessions.html" class="link-secondary">Read more...</a></p>
+							<a href="" class="btn btn-info disabled" aria-disabled="true">Call Us: 0452 583 279 </a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6 mb-3">
+					<div class="card" style="width: 90%;">
+						<img src="img/stock1.jpg" style="height: 300px" class="card-img-top" alt="Individual Player Development">
+						<div class="card-body">
+							<h2 class="card-title">Private Sessions</h2>
+							<p class="card-text">Looking for 1-on-1 player development? Book one or more sessions! <a
+									href="PrivateSessions.html" class="link-secondary">Read more...</a></p>
+							<a href="" class="btn btn-info disabled" aria-disabled="true">Call Us: 0452 583 279 </a>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
