--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Fast Approaching!</h3>
-					<p class="lead mt-2">April Easter School Holidays 2023. Find out more below.</p>
-					<a target="_blank" href="./img/Easter_2023_details_1.png">
-						<img src="./img/Easter_2023_details_1.png" alt="Forest" style="width:150px">
+					<p class="lead mt-2">Click below to find out more or register.</p>
+					<a target="_blank" href="./img/Easter_2023_update.png">
+						<img src="./img/Easter_2023_update.png" alt="Forest" style="width:150px">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4">
