--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Fast Approaching!</h3>
-					<p class="lead mt-2">Click below to find out more or register.</p>
+					<p class="lead mt-2">Click below to find out more or </p> 
+					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u" target="_blank">register</a>
 					<a target="_blank" href="./img/Easter_2023_update.png">
 						<img src="./img/Easter_2023_update.png" alt="Forest" style="width:150px">
 					</a>
@@ -98,8 +99,7 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Our Mission</h3>
-					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded
-						in the Hawkesbury, NSW, we specialise in small group as well as 1 on 1 soccer training programs.</p>
+					<p class="lead mt-2"> Founded in the Hawkesbury, NSW, we are a Private Football Academy. Focusing on player development from 5 and up, we specialise in small group as well as 1 on 1 technical training programs.</p>
 
 				</div>
 				<div class="col-lg-4 col-md-4">
