--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Fast Approaching!</h3>
-					<p class="lead mt-2">Click below to find out more or </p> 
-					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u" target="_blank">register</a>
+					<p class="lead mt-2">Click below to find out more or  
+					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u" target="_blank">register</a></p>
 					<a target="_blank" href="./img/Easter_2023_update.png">
 						<img src="./img/Easter_2023_update.png" alt="Forest" style="width:150px">
 					</a>
