--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Fast Approaching!</h3>
 					<p class="lead mt-2">Click below to find out more or  
-					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u" target="_blank">register</a></p>
+					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u" target="_blank">register.</a></p>
 					<a target="_blank" href="./img/Easter_2023_update.png">
 						<img src="./img/Easter_2023_update.png" alt="Forest" style="width:150px">
 					</a>
@@ -104,10 +104,10 @@
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>April Easter Holiday registration</h3>
-					<p class="lead mt-2">Click below. Places are filling fast!</p>
-					<a target="_blank" href="register.html">
-						<img src="./img/register.png" alt="Forest" style="width:150px">
+					<h3>Meet our Coach</h3>
+					<p class="lead mt-2">Nick is committed to incorporating the latest trends in footballing education into his sessions!</p>
+					<a target="_blank" href="Staff.html">
+						<img src="./img/nick.jpg" alt="Forest" style="width:150px">
 					</a>
 
 				</div>
