--- a/Staff.html
+++ b/Staff.html
@@ -28,7 +28,7 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Staff</h1>
 						<p class="lead">
-							Knowledgable and enthusiastic trainers.
+							Knowledgeable and enthusiastic.
 						</p>
 					</div>
 				</div>
