--- a/register.html
+++ b/register.html
@@ -43,12 +43,12 @@
 		<div class="container p-5">
 			<div class="row">
 
-				<div class="col-md-6 mb-3">
-					<div class="card" style="width: 90%;">
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u">
-						<img src="img/EARLY_Easter_Holiday_Session_2023_cropped.png" style="height: 300px; background-size: cover;" class="card-img-top"
+						<img src="img/EARLY_Easter_Holiday_Session_2023_cropped.png" style="max-height: 300px;" class="card-img-top"
 							alt="Bootcamp Holiday Sessions"></a>
-						<div class="card-body">
+						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">April Easter Holiday 2023</h2>
 							<p class="card-text">Drop in coaching sessions, small sides, all welcome.</p>
 							<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"
@@ -57,11 +57,11 @@
 					</div>
 				</div>
 
-				<div class="col-md-6 mb-3">
-					<div class="card" style="width: 90%">
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u">
-						<img src="img/stock11.jpg" style="height: 300px" class="card-img-top" alt="Progressive Training Programs"></a>
-						<div class="card-body">
+						<img src="img/stock11.jpg" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
+						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">2023 School Term 2</h2>
 							<p class="card-text">10 Week Progressive Training Program. <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
@@ -71,10 +71,10 @@
 					</div>
 				</div>
 
-				<div class="col-md-6 mb-3">
-					<div class="card" style="width: 90%;">
-						<img src="img/stock10.jpg" style="height: 300px" class="card-img-top" alt="Bespoke Team Training">
-						<div class="card-body">
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card" style="width:100%">
+						<img src="img/stock10.jpg" style="max-height:300px" class="card-img-top" alt="Bespoke Team Training">
+						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Team Sessions</h2>
 							<p class="card-text">Mix up your team's training program with a specialised group session. <a
 									href="PrivateSessions.html" class="link-secondary">Read more...</a></p>
@@ -83,10 +83,10 @@
 					</div>
 				</div>
 
-				<div class="col-md-6 mb-3">
-					<div class="card" style="width: 90%;">
-						<img src="img/stock1.jpg" style="height: 300px" class="card-img-top" alt="Individual Player Development">
-						<div class="card-body">
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card" style="width:100%">
+						<img src="img/stock1.jpg" style="max-height:300px" class="card-img-top" alt="Individual Player Development">
+						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Private Sessions</h2>
 							<p class="card-text">Looking for 1-on-1 player development? Book one or more sessions! <a
 									href="PrivateSessions.html" class="link-secondary">Read more...</a></p>
