--- a/News.html
+++ b/News.html
@@ -36,9 +36,14 @@
 		</div>
 	</section>
 	<!-- About Section End -->
+	
 
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
+		<div class="container">
+			<p>April 18, 2023</p>
+			<img src="img/Term_2_2023_FAB_Flyer_FULL_small.png" width="70%">
+		</div>
 		<div class="container">
 			<p>March 22, 2023</p>
 			<img src="img/Easter_2023_details_1.png" width="70%">
