end holidays start trial rego

--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u">
-						<img src="img/EARLY_Easter_Holiday_Session_2023_cropped.png" style="max-height: 300px;" class="card-img-top"
+						<img src="img/trial_small.png" style="max-height: 300px;" class="card-img-top"
 							alt="Bootcamp Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">April Easter Holiday 2023</h2>
