--- a/register.html
+++ b/register.html
@@ -49,8 +49,8 @@
 						<img src="img/trial_small.png" style="max-height: 300px;" class="card-img-top"
 							alt="Bootcamp Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">April Easter Holiday 2023</h2>
-							<p class="card-text">Drop in coaching sessions, small sides, all welcome.</p>
+							<h2 class="card-title">ONE Free Trial</h2>
+							<p class="card-text">Just found us? Unsure? Book one free trial. Come down!.</p>
 							<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"
 								class="btn btn-info">Register Now</a>
 						</div>
