--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u">
+						<a href="https://forms.office.com/r/kjSRuFtY4z">
 						<img src="img/trial_small.png" style="max-height: 300px;" class="card-img-top"
 							alt="Bootcamp Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
@@ -59,7 +59,7 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u">
+						<a href="https://forms.office.com/r/pqAz1MpsFc">
 						<img src="img/Term_2_2023_FAB_Flyer_small.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">2023 School Term 2</h2>
