--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">ONE Free Trial</h2>
 							<p class="card-text">Just found us? Unsure? Book one free trial. Come down!.</p>
-							<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUREZMSDdBNU4zVktXTTVSRFRJTURINVdIUC4u"
+							<a href="https://forms.office.com/r/kjSRuFtY4z"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
@@ -65,7 +65,7 @@
 							<h2 class="card-title">2023 School Term 2</h2>
 							<p class="card-text">10 Week Progressive Training Program. <a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u"
+							<a href="https://forms.office.com/r/pqAz1MpsFc"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
