--- a/register.html
+++ b/register.html
@@ -76,7 +76,7 @@
 						<img src="img/stock10.jpg" style="max-height:300px" class="card-img-top" alt="Bespoke Team Training">
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Team Sessions</h2>
-							<p class="card-text">Mix up your team's training program with a specialised group session. <a
+							<p class="card-text">Your team looking for a specialised training session? Call us.<a
 									href="PrivateSessions.html" class="link-secondary">Read more...</a></p>
 							<a href="" class="btn btn-info disabled" aria-disabled="true">Call Us: 0452 583 279 </a>
 						</div>
