--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -64,7 +64,7 @@
 					<ul>
 						<li>Age Category: Open to all ages.</li>
 						<li>Suggested Focus: 13+ years old.</li>
-						<li>Price: $100 per hour.</li>
+						<li>Price: call for quote or consultation.</li>
 					</ul>
 
 					<h3>1-on-1 or 1-on-2 focus session</h3>
@@ -75,7 +75,7 @@
 					<ul>
 						<li>Age Category: Open to all ages.</li>
 						<li>Suggested Focus: 13+ years old.</li>
-						<li>Price: $100 per hour.</li>
+						<li>Price: call for quote or consultation.</li>
 					</ul>
 
 					<h3>Team Sessions</h3>
@@ -88,7 +88,7 @@
 					<ul>
 						<li>Age Category: Open to all ages.</li>
 						<li>Suggested Focus: 13+ years old.</li>
-						<li>Price: $100 per hour.</li>
+						<li>Price: call for quote or consultation.</li>
 					</ul>
 					
 					<h3>Coaching Courses (Coming Soon)</h3>
