--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@
 					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/r/kjSRuFtY4z">
 						<img src="img/trial_small.png" style="max-height: 300px;" class="card-img-top"
-							alt="Bootcamp Holiday Sessions"></a>
+							alt="Free Trial"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">ONE Free Trial</h2>
 							<p class="card-text">Just found us? Unsure? Book one free trial. Come down!.</p>
@@ -74,12 +74,14 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
-						<img src="img/stock10.jpg" style="max-height:300px" class="card-img-top" alt="Bespoke Team Training">
+						<a href="https://forms.office.com/r/g08JHZpnEW">
+						<img src="img/Website_July_2023_Flyer.JPG" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Team Sessions</h2>
-							<p class="card-text">Your team looking for a specialised training session? Call us.<a
-									href="PrivateSessions.html" class="link-secondary">Read more...</a></p>
-							<a href="" class="btn btn-info disabled" aria-disabled="true">Call Us: 0452 583 279 </a>
+							<h2 class="card-title">July 2023 Holiday Sessions</h2>
+							<p class="card-text">The holidays are fast approaching. Sign up now!<a href="SchoolTerms.html"
+									class="link-secondary">Read more...</a></p>
+							<a href="https://forms.office.com/r/g08JHZpnEW"
+								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div>
