--- a/register.html
+++ b/register.html
@@ -75,7 +75,7 @@
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/r/g08JHZpnEW">
-						<img src="img/Website_July_2023_Flyer.JPG" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
+						<img src="img/Website_July_2023_Flyer_cropped.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">July 2023 Holiday Sessions</h2>
 							<p class="card-text">July holidays are fast approaching. Sign up now!<a href="SchoolTerms.html"
