--- a/register.html
+++ b/register.html
@@ -43,35 +43,7 @@
 
 		<div class="container p-5">
 			<div class="row">
-
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/kjSRuFtY4z">
-						<img src="img/trial_small.png" style="max-height: 300px;" class="card-img-top"
-							alt="Free Trial"></a>
-						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">ONE Free Trial</h2>
-							<p class="card-text">Just found us? Unsure? Book one free trial. Come down!.</p>
-							<a href="https://forms.office.com/r/kjSRuFtY4z"
-								class="btn btn-info">Register Now</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card" style="width:100%">
-						<a href="https://forms.office.com/r/pqAz1MpsFc">
-						<img src="img/Term_2_2023_FAB_Flyer_small.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
-						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">2023 School Term 2</h2>
-							<p class="card-text">10 Week Progressive Training Program. <a href="SchoolTerms.html"
-									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/pqAz1MpsFc"
-								class="btn btn-info">Register Now</a>
-						</div>
-					</div>
-				</div>
-
+				
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card" style="width:100%">
 						<a href="https://forms.office.com/r/g08JHZpnEW">
@@ -81,6 +53,35 @@
 							<p class="card-text">July holidays are fast approaching. Sign up now!<a href="SchoolTerms.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/g08JHZpnEW"
+								class="btn btn-info">Register Now</a>
+
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card" style="width:100%">
+						<a href="https://forms.office.com/r/kjSRuFtY4z">
+						<img src="img/trial_small.png" style="max-height: 300px;" class="card-img-top"
+							alt="Free Trial"></a>
+						<div class="card-body d-flex flex-column">
+							<h2 class="card-title">ONE Free Trial</h2>
+							<p class="card-text">Just found us? Unsure? Book ONE free trial. Come down!.</p>
+							<a href="https://forms.office.com/r/kjSRuFtY4z"
+								class="btn btn-info">Register Now</a>
+						</div>
+					</div>
+				</div> 
+
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card" style="width:100%">
+						<a href="https://forms.office.com/r/pqAz1MpsFc">
+						<img src="img/Term_2_2023_FAB_Flyer_small.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
+						<div class="card-body d-flex flex-column">
+							<h2 class="card-title">2023 School Term 2</h2>
+							<p class="card-text">10 Week-Term Progressive Training Program. <a href="SchoolTerms.html"
+									class="link-secondary">Read more...</a></p>
+							<a href="https://forms.office.com/r/pqAz1MpsFc"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
