--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
 						<img src="img/Website_July_2023_Flyer_cropped.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">July 2023 Holiday Sessions</h2>
-							<p class="card-text">July holidays are fast approaching. Sign up now!<a href="SchoolTerms.html"
+							<p class="card-text">July holidays are fast approaching. Sign up now!<a href="OurPhilosophy.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/g08JHZpnEW"
 								class="btn btn-info">Register Now</a>
