--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -45,7 +45,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<p class="lead">
-						From ages ~5 – 12, Foot and Ball Academy sessions maintain <strong>a principal focus on the 1 v
+						From U6's, Foot and Ball Academy sessions maintain <strong>a principal focus on the 1 v
 							1 duel.</strong>
 						That is, we structure our sessions on primarily improving this area of a player’s game. This is
 						motivated by our CORE Philosophy, which follows a popularised philosophy utilised in elite parts
@@ -121,7 +121,7 @@
 					<div class="col-lg-6 col-md-6  align-self-center">
 						<h2 class="text-dark">Session Guidelines</h2>
 						<p class="lead">As a brand-new Academy, you might want to know how we will generally approach a session.
-							Below is a guideline for most** sessions for players between the ages of ~5 – 12-year-olds:</p>
+							Below is a guideline for most** sessions for players U6's and above:</p>
 
 						<h3 class="text-dark">The Warmup:</h3>
 						<p class="lead">
