--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>Term 2 is here!</h3>
-					<p class="lead mt-2">Click below to find out more or  
-					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u" target="_blank">register.</a></p>
-					<a target="_blank" href="./img/Term_2_2023_FAB_Flyer.png">
-						<img src="./img/Term_2_2023_FAB_Flyer.png" alt="Forest" style="width:150px">
+					<h3>July 2023 Holiday Sessions </h3>
+					<p class="lead mt-2">Enrolling now. Click below to find out more. Then  
+					<a href="https://forms.office.com/r/g08JHZpnEW" target="_blank">register.</a></p>
+					<a target="_blank" href="./img/July_holidays_Flyer.png">
+						<img src="./img/July_holidays_Flyer.png" alt="Forest" style="width:150px">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4">
