--- a/navbar.html
+++ b/navbar.html
@@ -21,6 +21,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
+            <a class="dropdown-item" href="SchoolHolidays.html">School Holidays</a>
             <a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
             <!-- <a class="dropdown-item" href="Highlights.html">Training Videos</a> -->
             <a class="dropdown-item" href="register.html">Register Now</a>
