--- a/navbar.html
+++ b/navbar.html
@@ -35,6 +35,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="Location.html">Location</a>
             <a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
+            <a class="dropdown-item" href="AgeCategories.html">Age Categories</a>
             <a class="dropdown-item" href="Staff.html">Staff</a>
             <a class="dropdown-item" href="Privacy.html">Privacy</a>
           </div>
