--- a/navbar.html
+++ b/navbar.html
@@ -20,6 +20,7 @@
             Programs
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="Pricing.html">Pricing</a>
             <a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
             <a class="dropdown-item" href="SchoolHolidays.html">School Holidays</a>
             <a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
