updated landing page image and text

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item crs-img-1 active">
 					<div class="container">
-						<div class="carousel-caption pb-5 mb-5 text-left">
-							<p></p>
+						<div class="carousel-caption pb-5 mb-5 text-center">
+							<p class="lead ">
+								<span class="emboss">School Holiday enrolments now open!
+								</span>
+							</p>
+							<a href="register.html" class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div>
@@ -40,7 +44,7 @@
 					<div class="container">
 						<div class="carousel-caption mb-5 text-center">
 							<h2 class="display-4 text-light"><span class="emboss2">Our Staff</span></h2>
-							<p>
+							<p class="lead ">
 								<span class="emboss">Find out what motivates our coaches. Put names to faces!</span>
 							</p>
 							<a href="Staff.html" class="btn btn-info">Read More</a>
@@ -51,7 +55,7 @@
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-right">
 							<h2 class="display-4 text-light"><span class="emboss2">Programs</span></h2>
-							<p>
+							<p class="lead ">
 								<span class="emboss">Enrolling for a school term? A one-off group session? Or a 1 on 1? Find out more.
 								</span>
 							</p>
