--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Our Mission</h3>
-					<p class="lead mt-2"> Founded in the Hawkesbury, NSW, we are a Private Football Academy. Focusing on player development from 5 and up, we specialise in small group as well as 1 on 1 technical training programs.</p>
+					<p class="lead mt-2"> Founded in the Hawkesbury, NSW, we are a Private Football Academy. Our infrastructure is built around player development, NOT winning, from 5 years old and up. 
+						We offer other services such as specialised group sessions as well as 1 on 1 technical training.
+					</p>
 
 				</div>
 				<div class="col-lg-4 col-md-4">
