--- a/Pricing.html
+++ b/Pricing.html
@@ -42,14 +42,26 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
+				<p class="lead">	
+      				A quick summary of session pricing, saving you time trawling through the website! 
 					
-          Details to come!
+				<p>All payments are upfront, covering the duration of the current school term (or from the Term week you join us). </p>
+				<p>Below as follows:</p>
+				 
+				U6’s – U7’s (45-minute session): $13 per player per session. Cap: 8 players.
+				U7’s – U8’s (1 hour session): $26 per player per session. Cap: 5 players.
+				U9’s – U10’s (1 hour session): $26 per player per session. Cap: 5 players. 
+				U11’s – U12’s (1 hour session): $26 per player per session. Cap 5 players. 
+				Click Age Categories, School Terms, or Our Philosophy for more in depth information on how and why our Academy is structured the way it is. 
+				Click to also find out more about our Terms and Conditions. 
+				All enquires: P: +61 452 583 279 | E: footandballacademy@outlook.com
+
 
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u" class="btn btn-warning" role="button">Click Here to Register</a>
+					<a href="footandball.com.au/register" class="btn btn-warning" role="button">Click Here to Register</a>
 				</div>
 			</div>
 
