--- a/Pricing.html
+++ b/Pricing.html
@@ -28,7 +28,7 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Pricing Summary</h1>
 						<p class="lead">
-							A quick summary of session structure and pricing, saving you time! 
+							A quick summary of session structure and pricing, saving you wesbite time! 
 						</p>
 					</div>
 				</div>
@@ -46,13 +46,12 @@
 				<p>All payments are upfront, covering the duration of the current school term (or from the Term week you join us). </p>
 				
 					<p>Below as follows:</p>
-					<p><b>U6’s – U7’s</b> (45-minute session): $13 per player per session. Cap: 8 players.</p>
-					<p>U6’s – U7’s (45-minute session): $13 per player per session. Cap: 8 players.</p>
-					<p>U7’s – U8’s (1 hour session): $26 per player per session. Cap: 5 players.</p>
-					<p>U9’s – U10’s (1 hour session): $26 per player per session. Cap: 5 players. </p>
-					<p>U11’s – U12’s (1 hour session): $26 per player per session. Cap 5 players. </p>
+					<p><b>U6’s – U7’s</b> (45-minute session): <b>$13 per player per session</b>. Cap: 8 players.</p>
+					<p><b>U7’s – U8’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players.</p>
+					<p><b>U9’s – U10’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players. </p>
+					<p><b>U11’s – U12’s</b> (1 hour session): <b>$26 per player per session</b>. Cap 5 players. </p>
 
-					<p>Click Age Categories, School Terms, or Our Philosophy for more in depth information on how and why our Academy is structured the way it is. </p>
+					<p>Click <a href="AgeCategories">Age Categories</a>, School Terms, or Our Philosophy for more in depth information on how and why our Academy is structured the way it is. </p>
 
 					<p>Click to also find out more about our Terms and Conditions.</p>
 
@@ -61,7 +60,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<a href="Register.html" class="btn btn-warning" role="button">Click Here to Register</a>
+					<a href="register.html" class="btn btn-warning" role="button">Click Here to Register</a>
 				</div>
 			</div>
 
