--- a/Pricing.html
+++ b/Pricing.html
@@ -51,9 +51,9 @@
 					<p><b>U9’s – U10’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players. </p>
 					<p><b>U11’s – U12’s</b> (1 hour session): <b>$26 per player per session</b>. Cap 5 players. </p>
 
-					<p>Click <a href="AgeCategories">Age Categories</a>, School Terms, or Our Philosophy for more in depth information on how and why our Academy is structured the way it is. </p>
+					<p>Click on <a href="AgeCategories">Age Categories</a>, or <a href="SchoolTerms">School Terms</a>, or <a href="OurPhilosphy">Our Philosophy</a> for more in depth information on how and why our Academy is structured the way it is. </p>
 
-					<p>Click to also find out more about our Terms and Conditions.</p>
+					<p>Click to find out more about our <a href="TOS">Terms and Conditions</a>.</p>
 
 					<p> All enquires: P: +61 452 583 279 | E: footandballacademy@outlook.com </p>
 				</div>
