--- a/Pricing.html
+++ b/Pricing.html
@@ -51,7 +51,7 @@
 					<p><b>U9’s – U10’s</b> (1 hour session): <b>$26 per player per session</b>. Cap: 5 players. </p>
 					<p><b>U11’s – U12’s</b> (1 hour session): <b>$26 per player per session</b>. Cap 5 players. </p>
 
-					<p>Click on <a href="AgeCategories">Age Categories</a>, or <a href="SchoolTerms">School Terms</a>, or <a href="OurPhilosphy">Our Philosophy</a> for more in depth information on how and why our Academy is structured the way it is. </p>
+					<p>Click on <a href="AgeCategories">Age Categories</a>, or <a href="SchoolTerms">School Terms</a>, or <a href="OurPhilosophy">Our Philosophy</a> for more in depth information on how and why our Academy is structured the way it is. </p>
 
 					<p>Click to find out more about our <a href="TOS">Terms and Conditions</a>.</p>
 
