--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -47,40 +47,26 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						A typical curriculum will cover core topics plus combinations of each. E.g., dribbling, ball mastery,
-						shooting, etc. Followed by dribbling AND ball mastery, dribbling AND shooting, etc.</p>
+						A typical term curriculum has approximately a 65/45 split. 60-70% of our term session are spent working on 1v1 related exercises, 
+						ensuring the indvidual player is on the ball for the maximum amount of time.
+						E.g., dribbling, ball mastery, defending, tricks and turns, as well as space utilisation when attacking.
+						The other 30-40% of our allocated term sessions focus on passing and all it’s aspects. This latter component of the cirriculum has a 2 v 1’s and 3 v 2’s flavour to it.</p>
 					<p class="lead">
 						<b>All classes are limited to 5 enrolees or players.</b> (The odd trialist may also attend, see trialist guidelines
 						for more information). This ensures maximum attention can be provided by the coach to each player,
 						whilst numbers are enough to ensure healthy social interactions, we design meaningful game-based exercises,
 						and most importantly exciting 1 on 1 duels!</p>
 					<p class="lead">
-						At this early stage of our business lifecycle, we offer the school-term programs <b>to players aged between 5
-						and 12 years old.</b> The sessions are a general mix of skill level, until we achieve the necessary
+						At this early stage of our business lifecycle, we offer the school-term programs <b>to player age groups between U6’s (minimum 5) and U12’s.
+						</b> The sessions are a general mix of skill level, until we achieve the necessary
 						numbers to begin offering different skill level sessions.</p>
 					<p class="lead">
 						There is a small choice in sessions, running across two nights per week for Term 2 of 2023 (24th April –
 						30th June 2023). These days and times include:</p>
 
-					<h3> Monday afternoon-evenings </h3>
-					<p></p>
-					<ul>
-						<li>4pm - 5pm: 5-,6-, and 7-year-olds. </li>
-						<li>5.10pm - 6.10pm: 8-,9-, and 10-year-olds.</li>
-						<li>6.20pm - 7.20pm: 11-, and 12-year-olds. </li>
-					</ul>
-
-					<h3> Wednesday afternoon-evenings </h3>
-					<p></p>
-					<ul>
-						<li>4pm - 5pm: 5-,6-, and 7-year-olds. </li>
-						<li>5.10pm - 6.10pm: 8-,9-, and 10-year-olds.</li>
-						<li>6.20pm - 7.20pm: 11-, and 12-year-olds. </li>
-					</ul>
-
 					<h3> Pricing and Player Commitments </h3>
 					<p class="lead">
-						<b>Payments are upfront at the beginning of term priced at: $25 per player per session or $250 upfront for the
+						<b>Payments are upfront at the beginning of term priced at: $26 per player per session or $260 upfront for the
 						term. </b> Or the remainder of the weeks as calculated from the players arrival during the term.</p>
 					<p class="lead">
 						All term programs have a minimum commitment of 1 session per week for that term i.e., 10 sessions. </p>
@@ -88,18 +74,17 @@
 						If a player wants to join after the term has started, no worries! It is still a minimum commitment
 						of 1 session per week for the remainder of weeks in that school term.</p>
 					<p class="lead">
-						Players are to select a minimum of one time slot per week (from the available times listed above) according
-						to their age group.
-						Ages are determined based on the players age as of December 2023.</p>
+						Players are to select a minimum of one time slot per week according to their age group.
+						Ages are determined based on the players age as of December EOY.</p>
 					<p class="lead">
-						<b>If a player wishes to do 2 sessions per week there is a $5 discount for the second session.</b> Pricing then
+						<b>If a player wishes to do 2 sessions per week there is a $6 discount for the second session.</b> Pricing then
 						becomes:
-						$25 for the first session and $20 for the second through the 10-week program. That equals an upfront payment
-						of $450.
+						$26 for the first session and $20 for the second through the 10-week program. That equals an upfront payment
+						of $460.
 						Similar calculations as above if the player arrives during the term.</p>
 					<h3>Siblings</h3>
 					<p class="lead">
-						<b>Siblings also receive a $5 discount.</b> That is, the first sibling is $25 per session for the term, and all
+						<b>Siblings also receive a $6 discount.</b> That is, the first sibling is $26 per session for the term, and all
 						subsequent siblings are $20 per term program.</p>
 					<h3>Joining Fees and Uniform Fees</h3>
 					<p class="lead">
