--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -47,7 +47,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						A typical term curriculum has approximately a 65/45 split. 60-70% of our term session are spent working on 1v1 related exercises, 
+						A typical term curriculum has approximately a 65/45 split. 60-70% of our 10-week term sessions are spent working on 1v1 related exercises, 
 						ensuring the indvidual player is on the ball for the maximum amount of time.
 						E.g., dribbling, ball mastery, defending, tricks and turns, as well as space utilisation when attacking.
 						The other 30-40% of our allocated term sessions focus on passing and all it’s aspects. This latter component of the cirriculum has a 2 v 1’s and 3 v 2’s flavour to it.</p>
