--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -47,16 +47,15 @@
 					<p class="lead">
 						From U6's, Foot and Ball Academy sessions maintain <strong>a principal focus on the 1 v
 							1 duel.</strong>
-						That is, we structure our sessions on primarily improving this area of a player’s game. This is
+						W structure our sessions around primarily improving this area of a player’s game. This is
 						motivated by our CORE Philosophy, which follows a popularised philosophy utilised in elite parts
 						of
 						Europe (not our own):
 					</p>
 
 					<p class="lead">
-						<em>“Improving the individual player, improves the overall team.”</em> That is, we strive to
-						improve the
-						technical and mental aspects of an individual player, irrespective of their level.
+						<em>“Improving the individual player, improves the overall team.”</em> We strive to
+						improve the technical, conceptual, and mental aspects of an individual player, irrespective of their level.
 					</p>
 
 				</div>
@@ -76,9 +75,8 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Who can join?</h1>
 						<p class="lead">
-							We warmly <u>welcome everyone!</u> From players who have never played before to those with some years of
-							experience. It does not matter to us. Because at Foot and Ball Academy self-improvement is a player’s
-							primary challenge.
+							We warmly <u>welcome everyone!</u> From first-timers to those with some years of
+							experience. At Foot and Ball Academy self-improvement is a player’s primary challenge.
 						<p class="lead">
 							<em>“How good you were yesterday is yesterday’s achievement. Not todays.” - Coach Nick </em></p>
 
